test(controller): refactor MeController tests with TestDataFactory